--- a/paper/fraiche.tex
+++ b/paper/fraiche.tex
@@ -79,8 +79,7 @@ FRAICHE is composed of two distinctly different physical systems.  One is the de
 
 \begin{figure}[h!]
   \centering
-    \reflectbox{%
-      \includegraphics[width=0.5\textwidth]{architecture.png}}
+      \includegraphics[width=0.5\textwidth]{architecture.png}
   \caption{Fraiche System Architecture}
 \end{figure}
 
