--- a/paper/fraiche.tex
+++ b/paper/fraiche.tex
@@ -6,6 +6,8 @@
 \newcommand{\eg}{e.g.\@\xspace}
 \newcommand{\ie}{i.e.\@\xspace}
 \newcommand{\etc}{etc.\@\xspace}
+\newcommand{\Naive}{Na\"{i}ve\@\xspace}
+\newcommand{\naive}{na\"{i}ve\@\xspace}
 \lstset{language=python}
 \begin{document}
 
@@ -88,12 +90,6 @@ The Raspberry Pi also runs a simple webserver which allows gardeners to track th
 
 In the scenario we describe with multiple Raspberry Pis, each has a connection to a central database (stored in the cloud using Amazon EC2 service) which serves as a data repository. The system is designed to be scalable: when a new device connects to the system, it registers with its IP address and the information is broadcast to every Raspberry Pi in the current garden network. 
 
-\begin{figure}[h!]
-  \centering
-      \includegraphics[width=0.5\textwidth]{architecture.png}
-  \caption{Parallel form of the system architecture.}
-\end{figure}
-
 \section{Software Implementation}
 
 All systems were implemented in Python 2.7, and all tests were performed on a Raspberry Pi Model B, running Debian Linux.  Specs of the Raspberry Pi are as follows: 700MHz ARM 1176JZF-S core, Broadcomp VideoCore IV, 512MB SDRAM shared between CPU and GPU, 32GB SD card.  The Raspberry Pi is rated to 700mA at 3.5W.  On the client side, the web user interface complies with web standards and runs JavaScript to display the latest data with visual graphs in real-time.
@@ -108,67 +104,75 @@ In order to build a test harness which can simulate many sensors and many client
 
 \subsection{Schedulers}
 
-Six independent schedulers were built: Na\"{\i}ve, Periodic Offline, Sensor-triggered, Hybrid, Low Load, and Predicted Demand.  The scheduler API is as follows:
+Six independent schedulers were built: \Naive, Periodic Offline, Sensor-triggered, Hybrid, Low Load, and Predicted Demand.  The scheduler API is as follows:
 
 \begin{lstlisting}
 gotSensorEvent(plant_num, value)
 gotClientRequest(plant_name)
-timeToRunML() # returns bool
+isTimeToRunML() # returns bool
 runMLPredict() # returns float
 runMLUpdate() # returns float
 \end{lstlisting}
 
-\lstinline|gotSensorEvent|, \lstinline|gotClientRequest|, and \lstinline|timeToRunML| are over-riden by subclasses as appropriate.  All subclasses use the default \lstinline|runMLPredict|, which returns a float indicating the predicted soil moisture at the next time step, and the default \lstinline|runMLUpdate|, which feeds all not-yet-used sensor date to the model.
+\lstinline|gotSensorEvent|, \lstinline|gotClientRequest|, and \lstinline|isTimeToRunML| are over-riden by subclasses as appropriate (the last returns \lstinline|False| by default).  All subclasses use the default \lstinline|runMLPredict|, which returns a float indicating the predicted soil moisture at the next time step, and the default \lstinline|runMLUpdate|, which feeds all not-yet-used sensor date to the model.
 
-The server calls \lstinline|gotSensorEvent| and \lstinline|gotClientRequest| when it gets appropriate events and before it handles them internally.  A periodic callback is implemented to ping the scheduler every 5 seconds querying whether it needs to run its ML algorithm.  This is important for the scheduling algorithms that do not have event-based model updates.
+The server calls \lstinline|gotSensorEvent| and \lstinline|gotClientRequest| when it gets appropriate events and before it handles them internally.  A periodic callback is implemented to ping the scheduler every 5 seconds, prompting it make an update to the model if \lstinline|isTimeToRunML| returns true.  This is important for the scheduling algorithms that do not have event-based model updates.
 
-\subsubsection{Na\"{i}ve Scheduler}
+\subsubsection{\Naive Scheduler}
 
-The na\"{i}ve scheduler is very simple: when its \lstinline|gotClientRequest| function is called, it takes all sensor data not yet incorporated into the model and updates the model with it.  It uses default functionality for the remainder of the functions.
+The \naive scheduler is very simple: when its \lstinline|gotClientRequest| function is called, it takes all sensor data not yet incorporated into the model and updates the model with it.  It uses default functionality for the remainder of the functions.  This approach ensures maximum freshness, as the model is as up-to-date as possible when the prediction is made, but will lead to greater latency as the user is waiting while the model update occurs.
 
 \subsubsection{Periodic Offline Scheduler}
 
-The periodic offline scheduler has a period of 5 minutes.  Once five minutes has elapsed since the last time its model was updated, all new data are fed to the model.
+The periodic offline scheduler has a period of 5 minutes.  Once five minutes has elapsed since the last time its model was updated, all new data are fed to the model.  This approach targets the opposite end of the spectrum from the previous approach, with minimal latency, but potentially poor freshness.
 
 \subsubsection{Sensor-triggered Scheduler}
 
-The sensor-triggered scheduler overrides \lstinline|gotSensorEvent| to update the model after each sensor reading is recorded.
+The sensor-triggered scheduler overrides \lstinline|gotSensorEvent| to update the model after each sensor reading is recorded.  This maintains the freshness guarantees of the \naive approach, but decouples the update cost from the user request.  The trade-off here is that there will be many more updates as there is no caching of data.
 
 \subsubsection{Hybrid Scheduler}
 
-The hybrid scheduler has an instance of the periodic offline scheduler and an instance of the sensor-triggered scheduler, which each run their own model updates when appropriate.
+The hybrid scheduler has an instance of the periodic offline scheduler and an instance of the sensor-triggered scheduler, which are used to guide the timing of model updates.  The rationale behind this approach is that when the user makes a request the update being made involves less data, (since some was processed in the last periodic check), and so latency will be improved.
 
 \subsubsection{Low Load Scheduler}
 
-The low load scheduler defines ``low load'' as fewer than 15 client requests in the preceding 5 minutes.  If this load is seen at one of the periodic callback checkpoints, the model is updated with all fresh sensor data.
+The low load scheduler defines ``low load'' as fewer than 15 client requests in the preceding 5 minutes.  If this load is seen at one of the periodic callback checkpoints, the model is updated with all fresh sensor data.  This approach is primarily targeting the multi-user case, which is expected to suffer in all of the cases above as the extra users lead to delays in query-triggered approaches, and periodic methods could time updates at particularly bad times.
 
 \subsubsection{Predicted Demand Scheduler}
 
-The predicted demand scheduler has a meta-scheduler of the na\"{i}ve variety.  This meta scheduler models client request traffic.  When the meta-scheduler reports that client demand is predicted to increase in the near future, the models of plant moisture are updated with all fresh sensor data.
+The predicted demand scheduler has a meta-scheduler of the \naive variety.  This meta scheduler models client request traffic.  When the meta-scheduler reports that client demand is predicted to increase in the near future, the models of plant moisture are updated with all fresh sensor data.
 
-\subsection{Machine Learning Algorithms}
+\subsection{Prediction Model}
+
+\section{System Extensions}
+
+The two previous sections described the components of our base system, but in the process of implementing these it became clear that there were drawbacks with our architecture.  In particular, the limited computation on the Raspberry Pi was still an issue, and we had concerns about scaling beyond what a single device could handle.  Below we describe our investigation of ways to address these concerns.
 
 \subsection{Client-side Modeling}
 
-One inspiration from working with Raaspberry Pi is to leverage computation to the clients, while current web browsers and consumer devices are capable to perform reasonably heavy computation. Therefore, we moved the machine learning task, which was by far the greatest source of CPU use, to the client side in the JavaScript library when receiving the data update. In this way, we reduce the workload of the web server at the cost of repetitive client-side computation. We suspect this is a reasonable tradeoff for a low-cost network system.
+One approach we considered using to address the low computation power of the Raspberry Pi was to push computation to the client, as a consumer desktop machine is orders of magnitude more powerful than the Raspberry Pi.  We investigated implementations that pushed the prediction modeling to the user via javascript and found it was effective for our simple prediction model.  However, this approach was not considered worth further investigation as one common use case would be to have client requests coming from mobile devices, which are more powerful than the Raspberry Pi, but not significantly enough to be worth the communication cost.
 
-\subsection{A World of Multiple Pis}
+\subsection{System Expansion}
 
-Moving beyond a scenario of , we consider more devices...
+\begin{figure}
+  \centering
+      \includegraphics[width=0.5\textwidth]{architecture.png}
+  \caption{\label{fig:parallel}Parallel form of the system architecture.}
+\end{figure}
 
-We added an additional Raspberry Pi and facilities for the two to communicate and load balance using Amazon Cloud Services as an intermediary data storage location.  This system is scalable and self-balancing.
+In a real-world scenario we would expect that user demands would gradually increase, with more sensors and more clients.  With this in mind we experimented with easy expansion of our system.  Our approach was a simple load-balanced division of sensors and clients, with a broadcast announcement when new devices are added, as illustrated in Figure~\ref{fig:parallel}.
 
-Report to the central storage: We chose to use the free tier of the Amazon EC2 (Elastic Compute Cloud) service that provides flexible and scalable capacity in the cloud. 
+Our example implementation involved two additional Raspberry Pi boards and facilities for them to communicate and load balance using Amazon Cloud Services as an intermediary data storage location.  This system is scalable and self-balancing.  Report to the central storage is done via the free tier of the Amazon EC2 (Elastic Compute Cloud) service that provides flexible and scalable capacity in the cloud.  Inter-Pi communication occurs using http requests over web sockets, as an addition to the current server infrastructure.
 
-Inter-Pi communication: http requests, web sockets
+\section{Evaluation}
 
-\subsection{Simulation Harness}
+It was not feasible to set up multiple sensors and run a live test over weeks, so we implemented a simulation harness to emulate the sensors and clients.  We ran all simulations with the server on the Raspberry Pi, and the mock sensors and clients on our own laptops. 
 
-The simulation harness we constructed is also written in Python.  It builds off the splinter \cite{} library which can instantiate multiple full web browsers.  This feature is necessary for measuring the load time accurately: the client's page is only considered to be "loaded" when the 15 most recent historical data points (transmitted via WebSockets, as described above) are found in the page's JavaScript.
+The harness was written in Python, using Tornado to manage queries.  We experimented with two methods of simulating clients, first with splinter \cite{} running actual firefox instances, to maximise realism, then with phantomjs \cite{}, which made large scale simulations much easier.  It was necessary to use a system capable of running JavaScript as the client's page is only considered to be "loaded" when the 15 most recent historical data points (transmitted via WebSockets, as described earlier) are delivered via JavaScript.
 
 Client processes are forked from the main process: each client has a configurable list of plants from which list one plant is chosen randomly to query at each time step.  
 
-\section{Performance}
+\section{Results}
 
 We simulated three scenarios for FRAICHE: personal garden, community garden, and small farm.  Each of these scenarios has a distinctive balance between clients and plants.  All simulations were performed on the Raspberry Pi with client requests and sensor updates issued from a MacBook Pro.
 
